--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
+python-multipart==0.0.6
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 requests==2.31.0
 pandas==2.1.3
-python-multipart==0.0.6
-jinja2==3.1.2
-polyline==2.0.0
+geopandas==0.14.1
+shapely==2.0.2
+numpy==1.24.4
+polyline==2.0.2
 geopandas
 shapely
 rtree
 pyproj
 numpy
+
